--- a/app/src/main/res/layout/chess_space.xml
+++ b/app/src/main/res/layout/chess_space.xml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/square"
+    android:layout_width="35dp"
+    android:layout_height="35dp"
+    android:background="#000080"
+    android:orientation="vertical" >
 
-    <ImageButton
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    <ImageView
+        android:id="@+id/space_background"
+        android:layout_width="35dp"
+        android:layout_height="35dp" />
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/piece"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
+
+</FrameLayout>
