--- a/app/src/main/res/layout/activity_play_game.xml
+++ b/app/src/main/res/layout/activity_play_game.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_columnWeight="1"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -32,14 +33,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/drawButton"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:onClick="callForDraw"/>
 
         <Button
             android:text="@string/resign"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/resignButton"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:onClick="callForResign"/>
+
+        <Button
+            android:text="@string/undo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/undoButton"
+            android:layout_weight="1"
+            android:onClick="callForUndo"/>
 
         <Button
             android:text="@string/ai"
