--- a/app/src/main/res/layout/activity_replay_game.xml
+++ b/app/src/main/res/layout/activity_replay_game.xml
@@ -1,30 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_replay_game"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_columnWeight="1"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="website.kale.androidchess.ReplayGame">
+    tools:context=".PlayGameActivity" >
 
-    <ImageButton
+    <GridLayout
+        android:id="@+id/chessboard"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/light_space"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/imageButton" />
+        android:background="#000000"
+        android:gravity="center_horizontal"
+        android:columnCount="8"
+        android:rowCount="8" >
+    </GridLayout>
 
-    <ImageView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/light_space"
-        android:layout_above="@+id/imageButton"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="55dp"
-        android:id="@+id/imageView" />
+        android:layout_marginBottom="75dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true">
+
+        <Button
+            android:text="@string/previous_move"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/drawButton"
+            android:layout_weight="1"
+            android:onClick="callForDraw"/>
+
+        <Button
+            android:text="@string/ai"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+    </LinearLayout>
+
+
 </RelativeLayout>
